fix sonarqube code smells